--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -45,7 +45,7 @@ const homepageSchema = {
 	<Header />
 	<BannerContainer 
 		client:load
-		apiUrl="http://localhost:8080/api/public/banners" 
+		apiUrl="https://etreasure-1.onrender.com/api/public/banners" 
 		autoSlide={true}
 		slideInterval={5000}
 	/>
