--- a/web/src/pages/shop.astro
+++ b/web/src/pages/shop.astro
@@ -6,7 +6,7 @@ import ProductFilters from '../components/ProductFilters';
 import ProductGrid from '../components/ProductGrid';
 import Footer from '../components/Footer.astro';
 
-const PUBLIC_API_URL = 'http://localhost:8080';
+const PUBLIC_API_URL = 'https://etreasure-1.onrender.com';
 const PUBLIC_R2_BASE_URL = 'https://pub-1a3924a6c6994107be6fe9f3ed794c0a.r2.dev';
 
 // SSR data fetching for initial load
