updated code to show offer in header

--- a/web/src/pages/contact.astro
+++ b/web/src/pages/contact.astro
@@ -35,7 +35,7 @@ import Footer from '../components/Footer.astro';
 								<div>
 									<p class="font-semibold text-dark mb-1">Address</p>
 									<p class="text-dark/80">
-										Ethnic Treasures Showroom<br/>
+										Ethnic Treasures<br/>
 										479, Double Storey New Rajendra Nagar <br/>
 										New Delhi 110060, India
 									</p>
